Haskell port, very first steps.

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,4 @@
-/target
-/stale
-/lib
-/classes
-/checkouts
-pom.xml
-*.jar
-*.class
-/.lein-cljsbuild*
-/pom.xml.asc
-/.lein-failures
-/.lein-repl-history
-/.repl
-/out
-/.nrepl-port
+/clojure
+/dist
+*~
+#*
